About page text added

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
     <body>
          <div class="main-content">
         {{>header}}
+        <p>This site was created by Navaneeth Krishnan S. It uses mapbox.com and weatherstack.com!</p>
         <img class="portrait" src="/images/me.png" alt="My pic"/>
         </div>
         {{>footer}}
